# AI-TOD

./: pyproject.toml
aitodtoolkit/: generate_aitod_imgs.py
