[tool.poetry]
name = "aitodtoolkit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.2"
cython = "^3.0.7"
torch = "^2.1.2"
opencv-python = "^4.9.0.80"
scikit-image = "^0.22.0"
pillow = "^10.2.0"
tqdm = "^4.66.1"
pycocotools = "^2.0.7"
lxml = "^5.0.0"
mmengine = {git = "https://github.com/open-mmlab/mmengine.git"}
mmcv = {git = "https://github.com/open-mmlab/mmcv.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
